# wagtail-content-import

./: .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  ruff.toml  setup.cfg  setup.py  sitemap.xml  testmanage.py  tox.ini
.github/workflows/: publish.yml  ruff.yml  test.yml
basic_usage/: index.html
changing_import_fields/: index.html
converter_reference/: index.html
custom_converters/: index.html
docs/: basic_usage.md  changing_import_fields.md  converter_reference.md  custom_converters.md  flow.md  getting_started.md  google_docs_setup.md  index.md  microsoft_setup.md  release_notes.md  settings.md  structblocks.md  submitting_backend.md
flow/: index.html
getting_started/: index.html
google_docs_setup/: index.html
microsoft_setup/: index.html
release_notes/: index.html
search/: search_index.json
settings/: index.html
site/: 404.html  sitemap.xml
site/basic_usage/: index.html
site/custom_converters/: index.html
site/flow/: index.html
site/getting_started/: index.html
site/google_docs_setup/: index.html
site/search/: search_index.json
site/settings/: index.html
site/structblocks/: index.html
site/submitting_backend/: index.html
src/wagtail_content_import/: __init__.py  admin_views.py  apps.py  models.py  urls.py  utils.py  wagtail_hooks.py
src/wagtail_content_import/mappers/: base.py  converters.py  streamfield.py  tests.py
src/wagtail_content_import/migrations/: 0001_initial.py
src/wagtail_content_import/parsers/: __init__.py  base.py  google.py  microsoft.py  test_document.json  tests.py
src/wagtail_content_import/pickers/: __init__.py
src/wagtail_content_import/pickers/google/: apps.py  utils.py  wagtail_hooks.py
src/wagtail_content_import/pickers/google/static/wagtail_content_import/: google_picker.js
src/wagtail_content_import/pickers/google/templates/wagtail_content_import/: google_doc_results.html
src/wagtail_content_import/pickers/local/: apps.py  utils.py  wagtail_hooks.py
src/wagtail_content_import/pickers/microsoft/: apps.py  urls.py  utils.py  wagtail_hooks.py
src/wagtail_content_import/static/wagtail_content_import/css/: import-styles.css
src/wagtail_content_import/static/wagtail_content_import/js/: picker.js
src/wagtail_content_import/templates/wagtail_content_import/: action_menu_wrapper.html  google_picker_js_init.html  import_menu_item.html
src/wagtail_content_import/templates/wagtailadmin/pages/: create.html
src/wagtail_content_import/test/: non_root_urls.py
structblocks/: index.html
submitting_backend/: index.html
tests/: manage.py  test_mappers.py  test_parsers.py
tests/testapp/: settings.py  urls.py
wagtail_content_import/: __init__.py  admin_views.py  base.py  models.py  urls.py  utils.py  wagtail_hooks.py
wagtail_content_import.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wagtail_content_import/google/: models.py  parser.py  urls.py  utils.py  views.py  wagtail_hooks.py
wagtail_content_import/google/migrations/: 0001_initial.py
wagtail_content_import/mappers/: __init__.py  base.py  converters.py  default.py  streamfield.py  tests.py  utils.py
wagtail_content_import/migrations/: 0001_initial.py  0002_auto_20191009_1435.py
wagtail_content_import/parsers/: __init__.py  base.py  google.py  microsoft.py  pdf.py  registry.py  tables.py  test_document.json  tests.py
wagtail_content_import/pickers/: __init__.py
wagtail_content_import/pickers/google/: __init__.py  apps.py  models.py  urls.py  utils.py  views.py  wagtail_hooks.py
wagtail_content_import/pickers/google/migrations/: 0001_initial.py
wagtail_content_import/pickers/google/static/wagtail_content_import/: google_picker.js
wagtail_content_import/pickers/google/templates/wagtail_content_import/: google_doc_import_chooser.html
wagtail_content_import/pickers/local/: __init__.py  apps.py  utils.py  wagtail_hooks.py
wagtail_content_import/pickers/local/templates/wagtail_content_import/: local_picker_js_init.html
wagtail_content_import/pickers/microsoft/: __init__.py  apps.py  urls.py  utils.py  views.py  wagtail_hooks.py
wagtail_content_import/pickers/microsoft/static/wagtail_content_import/: microsoft_picker.js
wagtail_content_import/pickers/microsoft/templates/wagtail_content_import/: microsoft_picker_js_init.html
wagtail_content_import/static/wagtail_content_import/css/: import-styles.css
wagtail_content_import/static/wagtail_content_import/js/: picker.js
wagtail_content_import/templates/wagtail_content_import/: confirm_dialog.html  google_picker_js_init.html  picker_buttons.html  picker_buttons_base.html  picker_buttons_create.html  picker_buttons_edit.html
wagtail_content_import/templates/wagtailadmin/pages/: create.html  edit.html
wagtail_content_import/templatetags/: wagtailcontentimport_tags.py
wagtail_content_import/test/: non_root_urls.py  settings.py  urls.py
(+1 files in other folders)
