[project]
name = "wagtail_content_import"
description = "A module for Wagtail that provides functionality for importing page content from third-party sources."
authors = [

    {name = "Samir Shah", email = "solaris.smoke@gmail.com"},
    {name = "Emily Topp-Mugglestone", email = "emilytm@torchbox.com"},
    {name = "Karl Hobley", email = "karl@kaed.uk"},
    {name = "Matthew Westcott", email = "matthew.westcott@torchbox.com"},
]
maintainers = [
    {name = "Emily Topp-Mugglestone", email = "emilytm@torchbox.com"},
]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["Wagtail", "Django", "content import", "Google Docs", "OneDrive", "SharePoint", "docx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
    "Framework :: Wagtail :: 7",
]

dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "Wagtail>=6.3",
    "python-docx>=1.2.0"
]

[project.optional-dependencies]
testing = [
    # Required for running the tests
    "mock>=5.2.0",
    # For coverage and PEP8 linting
    "coverage>=7.10.6",
    "tox>=4.30.2",
    "dj-database-url>=3,<4"
]

[project.urls]
Source = "https://github.com/torchbox/wagtail-content-import"
Documentation = "https://torchbox.github.io/wagtail-content-import/index.html"
Changelog = "https://github.com/torchbox/wagtail-content-import/blob/main/docs/release_notes.md"


[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
path = "src/wagtail_content_import"


[tool.flit.sdist]
exclude = [
    ".*",
    "*.db",
    "*.json",
    "*.ini",
    "*.sqlite3",
    "*.yaml",
    "docs/",
    "tests/",
    "CHANGELOG.md",
    "ruff.toml",
]
